--- a/challenge5.css
+++ b/challenge5.css
@@ -21,6 +21,10 @@ body {
     padding: 0 28%;
 }
 
+.header h1 {
+    font-size: 40px;
+}
+
 .header h1:first-of-type{
     color: hsl(234, 12%, 34%);
     font-weight: 200;
@@ -73,7 +77,7 @@ body {
 }
 
 
-.cards h3 {
+.cards h2 {
     color: hsl(234, 12%, 34%);
     margin-bottom: 10px;
 }
@@ -99,9 +103,12 @@ body {
     
     .header {
         padding: 0;
-        font-size: 11px;
     }
     
+    .header h1 {
+        font-size: 24px;
+    }
+
     .header h1:first-of-type{
         color: hsl(234, 12%, 34%);
         font-weight: 200;
@@ -116,7 +123,7 @@ body {
         margin-bottom: 60px;
         padding: 0 20px;
         color: hsl(229, 6%, 66%);
-        font-size: 13px;
+        font-size: 14px;
     }
     
     .cards {
@@ -129,7 +136,7 @@ body {
         margin-bottom: 30px;
     }
     
-    .cards h3 {
+    .cards h2 {
         margin-bottom: 5px;
         font-size: 18px;
     }
